objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SunPower representative responsible for keeping this piece of content up to date in conjunction with the author.</description>
        <inlineHelpText>Include the SunPower representative responsible for keeping this piece of content up to date.</inlineHelpText>
        <label>Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Certificates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logos &amp; Images</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annexes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulletins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagrams &amp; CAD Blocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Source_Link__c</fullName>
        <label>DMS Source Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Subject Matter Expert</description>
        <label>SME</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Account_Name__c</field>
                <operation>equals</operation>
                <value>SunPower Corporation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Link__c</fullName>
        <label>Source Link</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject_Matter_Expert__c</fullName>
        <label>Subject Matter Expert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Model__c</fullName>
        <label>System Model</label>
        <picklist>
            <picklistValues>
                <fullName>230W (Model SPR-230NE-WHT-D)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>245W (Model SPR-245NE-WHT-D)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance Program (Employee Solar Program)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoided Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bios, Org Charts &amp; Resumes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Local Content-Education-Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Info-About SunPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design &amp; Engineering Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec Summaries-Cover Letters-Transmittal Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Experience &amp; Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance &amp; Bonding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection &amp; Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Publicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O &amp; M and Performance Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Guarantees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Releases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing, Performance and Project Economics Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Supply Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management &amp; Construction Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Simulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality &amp; Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>References &amp; Recommendation Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontractors &amp; Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranties</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Due__c</fullName>
        <description>Date that an update is due for a piece of content in the Proposal Content Library.</description>
        <inlineHelpText>Include a date for this piece of content to be updated.</inlineHelpText>
        <label>Update Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Frequency__c</fullName>
        <label>Update Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Variable_Content_Detail__c</fullName>
        <description>Meant to include detail on variable content within the document that needs to be changed whenever the document gets a new revision.</description>
        <inlineHelpText>Include specific data that needs to be updated in this piece of content.</inlineHelpText>
        <label>Variable Content Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture &amp; Wineries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City, County, State Govt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges &amp; Universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/ Insurance/ Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GigaSolar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels &amp; Resorts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12 School Districts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics &amp; Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Verticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals &amp; Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate REIT Commercial Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities &amp; IPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Info</fullName>
        <active>true</active>
        <label>Product Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposal_Archive</fullName>
        <active>true</active>
        <label>Proposal Archive</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposal_Content</fullName>
        <active>true</active>
        <label>Proposal Content</label>
    </recordTypes>
</CustomObject>